initial namespace changes

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,20 +4,20 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="css/apr_style.css" media="screen" />
-<title>com.mindset.fiorimoni</title>
+<title>com.mindset.appanalyzer</title>
 
 <script id='sap-ui-bootstrap' type='text/javascript'
 src='https://sapui5.hana.ondemand.com/resources/sap-ui-core.js'
 data-sap-ui-theme='sap_bluecrystal'
 data-sap-ui-libs='sap.m, sap.ui.layout,sap.ui.unified'
 data-sap-ui-xx-bindingSyntax="complex"
-data-sap-ui-resourceroots='{ "com.mindset.fiorimoni" : "./" }'>
+data-sap-ui-resourceroots='{ "com.mindset.appanalyzer" : "./" }'>
 </script>
 <script>
 var shell = new sap.m.Shell("Shell", {
 showLogout : false,
 app : new sap.ui.core.ComponentContainer({
-name: "com.mindset.fiorimoni"
+name: "com.mindset.appanalyzer"
 }),
 homeIcon : {
 'phone' : 'img/57_iPhone_Desktop_Launch.png',
