more namespace changes

--- a/webapp/test/testOVP.html
+++ b/webapp/test/testOVP.html
@@ -37,7 +37,7 @@
 			},
 			applications: {
 				"OVP-display": {
-					"additionalInformation": "SAPUI5.Component=com.mindset.fiorimoni",
+					"additionalInformation": "SAPUI5.Component=com.mindset.appanalyzer",
 					"applicationType": "URL",
 					"url": "../"
 				}
@@ -54,7 +54,7 @@
 			data-sap-ui-libs="sap.m, sap.ushell"
 			data-sap-ui-theme="sap_belize"
 			data-sap-ui-compatVersion="edge"
-			data-sap-ui-resourceroots='{"com.mindset.fiorimoni": "../"}'
+			data-sap-ui-resourceroots='{"com.mindset.appanalyzer": "../"}'
 			data-sap-ui-frameOptions='allow'> // NON-SECURE setting for testing environment
 	</script>
 
