added version to manifest and index

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,7 +7,7 @@
 <title>com.mindset.appanalyzer</title>
 
 <script id='sap-ui-bootstrap' type='text/javascript'
-src='https://sapui5.hana.ondemand.com/resources/sap-ui-core.js'
+src="resources/sap-ui-core.js"
 data-sap-ui-theme='sap_bluecrystal'
 data-sap-ui-libs='sap.m, sap.ui.layout,sap.ui.unified'
 data-sap-ui-xx-bindingSyntax="complex"
